# siem-soar-project

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  ALERTS_IMPLEMENTATION_CHECKLIST.md  BUILD_AND_DEPLOY.md  CHANGELOG.md  CLAUDE.md  DOCKER_BUILD_FIX_SUMMARY.md  DOCKER_BUILD_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  DOCKER_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES.md  build.ps1  build.sh  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_deploy_guide.md  test_alerts_api.sh  turbo.json  verify-docker-builds.sh  verify-setup.sh
ai/: README.md  pyproject.toml
ai/agents/: __init__.py  base.py  memory.py  registry.py  state.py
ai/agents/analysis/: __init__.py  analyzer.py  graph.py  impact_assessor.py  root_cause.py  threat_classifier.py
ai/agents/healing/: __init__.py  feedback_loop.py  playbook_optimizer.py  rule_tuner.py  self_healer.py
ai/agents/investigation/: __init__.py  context_collector.py  evidence_gatherer.py  graph.py  investigator.py  timeline_builder.py
ai/agents/orchestrator/: __init__.py  coordinator.py  graph.py  orchestrator.py  scheduler.py  supervisor.py
ai/agents/response/: __init__.py  action_executor.py  action_planner.py  graph.py  responder.py  validator.py
ai/agents/safety/: __init__.py  approval_gate.py  audit.py  guardrails.py  limits.py  rollback.py
ai/common/: __init__.py  config.py  logging.py  models.py
ai/data/: __init__.py  augmentation.py  loader.py  pipeline.py  preprocessor.py
ai/feedback/: __init__.py  collector.py  labeler.py  retrainer.py  validator.py
ai/finetuning/: __init__.py  dataset.py  evaluator.py  tokenizer.py  trainer.py
ai/integration/: __init__.py  alert_consumer.py  alert_producer.py  metrics.py
ai/models/: __init__.py
ai/models/classifier/: __init__.py  alert_classifier.py  architecture.py  config.py  features.py
ai/models/clustering/: __init__.py  clusterer.py  embedder.py  model.py  similarity.py
ai/models/dga/: __init__.py  config.py  dataset.py  features.py  inference.py  model.py  train.py  trainer.py
ai/models/nl2sql/: __init__.py  evaluator.py  query_generator.py  schema_encoder.py  sql_decoder.py  trainer.py
ai/models/priority/: __init__.py  features.py  priority_model.py  ranking.py
ai/models/recommender/: __init__.py  action_suggester.py  playbook_recommender.py  similarity.py
ai/models/summarizer/: __init__.py  extractor.py  summarizer.py  template.py
ai/models/ueba/: __init__.py  anomaly.py  feature_extractor.py  features.py  model.py  profile.py  (+1 more)
ai/rag/: __init__.py  chunker.py  embedder.py  indexer.py  reranker.py  retriever.py
ai/services/: __init__.py
ai/training/: __init__.py  callbacks.py  metrics.py  optimizer.py  trainer.py
(+765 files in other folders)
